# blog-api

./: .gitignore  README.md  pyproject.toml  test_api.py
blog_api/: settings.py  urls.py
post/: admin.py  models.py  serializers.py  urls.py  views.py
post/management/commands/: generate_test_posts.py
post/migrations/: 0001_initial.py  0002_alter_post_body.py
