[project]
name = "blog-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-cors-headers>=4.8.0",
    "django-debug-toolbar>=6.0.0",
    "django-filter>=25.1",
    "django-markdownx>=4.0.9",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "drf-spectacular-sidecar>=2025.9.1",
    "faker>=37.6.0",
    "nh3>=0.3.0",
    "psycopg2>=2.9.10",
    "requests>=2.32.5",
]
